--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,3 @@
-<div id="wrapper">
-    <test></test>
-    <total-list [total]="todos.length" [compleated]="completed()" [open]="open()"></total-list>
-    <action-input (todoAdded)="addTodo($event,false)"></action-input>
-    <action-list [todos]="todos"
-                 (remove)="removeTodo($event)"
-                 (toggle)="toggleTodo($event)"
-    ></action-list>
-</div>
+
+<todo></todo>
 
